--- a/src/components/brand/brand.css
+++ b/src/components/brand/brand.css
@@ -1,18 +1,17 @@
 .gpt3__brand {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: center; 
   align-items: center;
 }
 
 .gpt3__brand div {
-  width: 100%;
+  flex: 1;
+  max-width: 150px;
+  min-width: 120px;
+  margin: 1rem;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1rem;
-}
-
-.gpt3__brand div img {
-  padding: 0 1rem;
 }
